--- a/ToDoApp/System/ru.lproj/Localizable.strings
+++ b/ToDoApp/System/ru.lproj/Localizable.strings
@@ -8,4 +8,6 @@
 
 "_search" = "Найти задачу";
 "_tasks" = "Задачи";
+//"%1$@ _some-tasks%2$@" = "%1$@ Задач%2$@";
+"%lld _some-tasks" = "%lld Задач";
 "_no-title" = "Без названия";
