--- a/ToDoApp/System/ru.lproj/Localizable.strings
+++ b/ToDoApp/System/ru.lproj/Localizable.strings
@@ -8,6 +8,18 @@
 
 "_search" = "Найти задачу";
 "_tasks" = "Задачи";
-//"%1$@ _some-tasks%2$@" = "%1$@ Задач%2$@";
-"%lld _some-tasks" = "%lld Задач";
+"_some-tasks" = "%1$@ Задач%2$@";
 "_no-title" = "Без названия";
+"_back" = "Назад";
+"_add-title" = "Введите заголовок...";
+"_add-todo" = "Введите задачу...";
+
+//MARK: - ContextMenu
+"_edit" = "Редактировать";
+"_share" = "Поделиться";
+"_delete" = "Удалить";
+
+//MARK: - Alert
+"_attention" = "Внимание!";
+"_empty-fileds" = "Заголовок и описание должны быть заполнены!";
+"_cancel" = "Отмена";
